fix z-index in conjunction with spatial

--- a/src/rdfauthor.css
+++ b/src/rdfauthor.css
@@ -19,7 +19,7 @@ div.modal-wrapper {
 /*    background-color: transparent;*/
     background-color: rgba(255, 255, 255, 0.75);
     /* background-color: rgba(0, 0, 0, 0.2); */
-    z-index: 1000;
+    z-index: 1095;
 }
 
 #rdfauthor-view {
@@ -35,7 +35,7 @@ div.modal-wrapper {
     /* taken from div.versatile */
     position: absolute;
     width: 48em;
-    z-index: 1001;
+    z-index: 1099;
 
     /* shadow */
     -moz-box-shadow: 0.2em 0.5em 2.5em #000;
